--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/parser
+
+spring.datasource.url=jdbc:mysql://localhost:3306/geojson
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
