--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.sap.cloud.db.jdbc</groupId>
+            <artifactId>ngdbc</artifactId>
+            <version>2.3.48</version>
+        </dependency>
     </dependencies>
 
 
