--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/geojson2
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:sap://localhost:30015/geojson
+spring.datasource.username=SYSTEM
+spring.datasource.password=787121909Romang
 spring.jpa.show-sql=true
+spring.jooq.sql-dialect=HANAColumnStoreDialect
+spring.datasource.driver-class-name=com.sap.db.jdbc.Driver
